parser/testdata/resource_sqldb_outside_svc.txt
! parse
err 'cannot define SQL Database resource in non-service package'

-- pkg/pkg.go --
package pkg

import (
    "context"

    "encore.dev/storage/sqldb"
)

var Moo = sqldb.Named("moo")
-- want: errors --

── Error ──────────────────────────────────────────────────────────────────────────────────[E0003]──

internal compiler error: unknown resource (path "SQLDatabase:moo")

    ╭─[ pkg/pkg.go:9:5 ]
    │
  7 │ )
  8 │
  9 │ var Moo = sqldb.Named("moo")
    ⋮     ────────────────────────
────╯
